private/djangocms-simple-admin.css
/* =============================================================================
   CSS VARIABLES & THEMING
   ============================================================================= */

:root, body {
    --font-family-primary: Helvetica, Arial, sans-serif;

    --button-radius: var(--dca-btn-radius);
    --cards-border-radius: var(--dca-border-radius);

    --primary: var(--dca-primary);
    --secondary: var(--dca-white);
    --accent: var(--dca-action-bg);
    --primary-fg: var(--dca-white);

    --body-fg: var(--dca-black);
    --body-bg: var(--dca-white);

    --header-color: #f7f7f7;
    --header-branding-color: white;
    --header-bg: var(--dca-secondary);
    --header-link-color: var(--dca-black);

    --breadcrumbs-fg: var(--dca-gray);
    --breadcrumbs-link-fg: var(--dca-primary);
    --breadcrumbs-bg: var(--dca-gray-lightest);

    /* --link-fg: color-mix(in srgb, var(--dca-primary), var(--dca-secondary) 40%); */
    --link-fg: var(--dca-gray);
    /* --link-hover-color: hsl(from var(--dca-primary) calc(h + 10) s l); */
    --link-hover-color: color-mix(in srgb, var(--link-fg), var(--dca-white) 30%);
    --link-selected-fg: var(--dca-primary);

    --hairline-color: var(--dca-gray-lightest);
    --border-color: var(--dca-gray-lighter);

    --message-success-bg: var(--dca-secondary);
    --error-fg: var(--dca-red);

    --darkened-bg: var(--dca-gray-lightest); /* A bit darker than --body-bg */
    /*--selected-bg: #e4e4e4; !* E.g. selected table cells *!*/
    --selected-row: var(--dca-secondary);

    --button-fg: var(--dca-gray-darker);
    --button-bg: var(--dca-white);
    --button-hover-bg: color-mix(in srgb, var(--dca-secondary) 50%, var(--dca-white));
    --default-button-fg: var(--dca-action-text);
    --default-button-bg: var(--dca-action-bg);
    --default-button-hover-bg: color-mix(in srgb, var(--dca-action-bg), var(--dca-black) 10%);
    --close-button-bg: var(--button-bg);
    --close-button-hover-bg: var(--button-hover-bg);
    --delete-button-bg: var(--dca-red);
    --delete-button-hover-bg: color-mix(in srgb, var(--delete-button-bg), black 10%);

    --object-tools-fg: var(--body-fg);
    --object-tools-bg: var(--dca-white);
    --object-tools-hover-bg: var(--button-hover-bg);
}

:root {
    color-scheme: dark light;
    --dca-dark: #2d4c4d;
    --dca-light: #defcb9;
    --dca-white: light-dark(#FFF, #000);
    --dca-black: light-dark(#2a2c2e, rgb(from white calc(r - 45) calc(g - 44) calc(b - 46)));
    --dca-primary: light-dark(var(--dca-dark), rgb(from var(--dca-light) calc(r - 45) calc(g - 44) calc(b - 46)));
    --dca-secondary: light-dark(var(--dca-light), var(--dca-dark));
    --dca-red: #d44848;
    --dca-action-bg: var(--dca-secondary);
    --dca-action-text: var(--dca-black);
    --dca-gray: light-dark(#7c7c7c, #aaa);
    --dca-gray-super-lightest: light-dark(#f7f7f7, #303030);
    --dca-gray-lightest: light-dark(#f7f7f7, #303030);
    --dca-gray-lighter: light-dark(#ddd, #666);
    --dca-gray-light: light-dark(#999, #888);
    --dca-gray-darker: light-dark(#454545, #ddd);
    --dca-gray-darkest: light-dark(#333, #eee);
    --dca-border-radius: 20px;
    --dca-btn-radius: 40px;
    --dca-default-spacing: 2px;
}

:root[data-cms-theme="4"], body.cms-4 {
    --dca-dark: #00bbff;
    --dca-light: color-mix(in srgb, var(--dca-dark), var(--dca-white) 55%);
    --dca-black: light-dark(#000, #FFF);
    --dca-primary: light-dark(var(--dca-dark), color-mix(in srgb, var(--dca-dark), black 20%));
    --dca-secondary: var(--dca-gray-lighter);
    --dca-action-bg: var(--dca-primary);
    --dca-action-text: var(--dca-white);
    --dca-border-radius: 5px;
    --dca-btn-radius: 3px;
    --dca-default-spacing: 0px;
}

:root[data-cms-theme="4"] body, body.cms-4 {
    --accent: var(--dca-primary);
    --message-success-bg: light-dark(#dfd, #006b1b);
}


[data-theme="auto"] {
    color-scheme: dark light;
}

[data-theme="light"] {
    color-scheme: light;
}

[data-theme="dark"] {
    color-scheme: dark;
}

/* =============================================================================
   TYPOGRAPHY
   ============================================================================= */
h1 {
    font-size: 1.6rem;
    padding: 8px 0;
}
h2 {
    font-size: 1.4rem;
}
h3 {
    font-size: 1.2rem;
}
h4, .module h2, .module caption, .inline-group h2,
#changelist .actions label, legend {
    font-size: 1rem;
}
h5, .small, td, th, thead th, .help, p.help, form p.help, div.help, form div.help, div.help li {
    font-size: 0.875rem;
}
.mini {
    font-size: 0.75rem;
}
li, dt, dd {
    font-size: 1rem;
    line-height: 1.6rem;
}

table thead th .text span {
    padding: 8px 12px;
}

table thead th {
    text-transform: capitalize;
}

#changelist-filter {
    h3, li {
        font-size: 0.875rem;
    }
    li.selected {
        border-left-color: var(--primary);
    }
}


a.addlink {
    min-width: 16px;
    min-height: 16px;
}

/* =============================================================================
   LAYOUT & COMPONENTS
   ============================================================================= */

/* Admin header */
#header {
    background: var(--dca-dark);
    a:link, a:visited, #logout-form button {
        color: white;
    }
    #site-name a:link, #site-name a:visited {
        font-size: 1.2rem;
        color: var(--header-branding-color);
    }
}

/* Full width dashboard */

.dashboard #content {
    width: calc(100% - 340px);
}

/* Changelists */

#content-related, #changelist-filter {
    background: var(--dca-secondary);
    color: var(--body-fg);
    border-radius: var(--cards-border-radius);
    details > summary {
        border-radius: 0;
        padding-block: 5px;
    }
    padding-top: 15px;
    h2 {
        background: transparent;
    }
}

/* Page tree */
a.jstree-anchor {
    color: var(--body-fg);
    &:hover, &:link {
        color: var(--body-fg);
        text-decoration: none;
    }
}
/* ... */

